<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_your"
        android:textColor="@color/white"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        android:textSize="30sp"
        android:textColor="@color/orange"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/inMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_minutes"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/inpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_date"
        android:backgroundTint="@color/black"
        android:textColor="@color/orange"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/dateOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_12_09_1997"
        android:textColor="@color/burgundy"
        android:textSize="18sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/selected_date"
        android:textColor="@color/secondary"
        android:textSize="18sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/dateMinOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/_150"
        android:textColor="@color/burgundy"
        android:textSize="28sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/minOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/minutes_old"
        android:textColor="@color/secondary"
        android:textSize="24sp"
        android:visibility="gone"/>

</LinearLayout>